--- a/css/main.css
+++ b/css/main.css
@@ -20,9 +20,11 @@ a {
 }
 .global-nav {
     height: 44px;
+    padding: 0 1rem;
 }
 .local-nav {
     height: 52px;
+    padding: 0 1rem;
     border-bottom: 1px solid #ddd;
 }
 
@@ -35,7 +37,7 @@ a {
     height: 100%;
 }
 .global-nav-links {
-    justify-content:space-between;
+    justify-content: space-between;
 }
 .product-name {
     margin-right: auto;
@@ -45,4 +47,108 @@ a {
 .local-nav-item {
     margin-left: 2em;
     font-size: 0.8rem;
+}
+.scroll-section {
+    padding-top: 50vh;
+}
+#scroll-section-0 h1 {
+    font-size: 4rem;
+    text-align: center;
+}
+.main-message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px 0;
+    height: 3em;
+    font-size: 2.5rem;
+}
+.main-message p {
+    line-height: 1.2;
+    font-weight: bold;
+    text-align: center;
+}
+.main-message small {
+    display: block;
+    margin-bottom: 0.5em;
+    font-size: 1rem
+}
+#scroll-section-2 .main-message {
+    font-size: 3.5rem;
+}
+.description {
+    max-width:  1000px;
+    margin: 0 auto;
+    font-size: 1.2rem;
+    color: #888;
+    padding: 0 1rem;
+}
+.description strong {
+    float: left;
+    margin-right: 0.2em;
+    font-size: 3rem;
+    color: rgb(29, 29, 31);
+}
+.desc-message {
+    width: 50%;
+    font-weight: bold;
+}
+.pin {
+    width: 1px;
+    height: 100px;
+    background-color:rgb(29, 29, 31);
+}
+.mid-message {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    font-size: 2rem;
+    color: #888;
+}
+.mid-message strong {
+    color: rgb(29, 29, 31);
+}
+.canvas-caption {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    color: #888;
+}
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 7rem;
+    background-color: darkorange;
+}
+
+@media (min-width: 1024px) {
+    #scroll-section-0 h1 {
+        font-size: 9vw;
+    }
+    .main-message {
+        font-size: 4vw;
+    }
+    .description {
+        font-size: 2rem;
+    }
+    .description strong {
+        font-size: 6rem;
+    }
+    #scroll-section-2 .main-message {
+        font-size: 6vw;
+    }
+    .main-message small {
+        font-size: 1.5vw;
+    }
+    .desc-message {
+        width: 20%;
+    }
+    .mid-message {
+        font-size: 4vw;
+    }
+    .canvas-caption {
+        font-size: 2rem;
+    }
 }
