--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,18 @@ a {
     text-decoration: none;
 }
 .global-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 44px;
     padding: 0 1rem;
 }
 .local-nav {
+    position: absolute;
+    top: 45px;
+    left: 0;
+    width: 100%;
     height: 52px;
     padding: 0 1rem;
     border-bottom: 1px solid #ddd;
@@ -49,6 +57,7 @@ a {
     font-size: 0.8rem;
 }
 .scroll-section {
+    border: 3px solid red;
     padding-top: 50vh;
 }
 #scroll-section-0 h1 {
@@ -121,6 +130,19 @@ a {
     align-items: center;
     height: 7rem;
     background-color: darkorange;
+}
+.sticky-elem {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+#show-scene-0 #scroll-section-0 .sticky-elem,
+#show-scene-1 #scroll-section-1 .sticky-elem,
+#show-scene-2 #scroll-section-2 .sticky-elem,
+#show-scene-3 #scroll-section-3 .sticky-elem {
+    display: block;
 }
 
 @media (min-width: 1024px) {
