--- a/css/main.css
+++ b/css/main.css
@@ -68,9 +68,11 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    top: 35vh;  
     margin: 5px 0;
     height: 3em;
     font-size: 2.5rem;
+    opacity: 0;
 }
 .main-message p {
     line-height: 1.2;
@@ -107,6 +109,14 @@ a {
     height: 100px;
     background-color:rgb(29, 29, 31);
 }
+#scroll-section-2 .b {
+    top: 10%;
+    left: 40%;
+}
+#scroll-section-2 .c {
+    top: 15%;
+    left: 45%;
+}
 .mid-message {
     max-width: 1000px;
     margin: 0 auto;
@@ -134,7 +144,6 @@ a {
 .sticky-elem {
     display: none;
     position: fixed;
-    top: 0;
     left: 0;
     width: 100%;
 }
@@ -166,6 +175,13 @@ a {
     }
     .desc-message {
         width: 20%;
+    }
+    #scroll-section-2 .b {
+        top: 20%;
+        left: 53%;
+    }
+    #scroll-section-2 .c {
+        left: 55%;
     }
     .mid-message {
         font-size: 4vw;
