--- a/css/main.css
+++ b/css/main.css
@@ -59,10 +59,12 @@ a {
     font-size: 0.8rem;
 }
 .scroll-section {
-    border: 3px solid red;
     padding-top: 50vh;
 }
 #scroll-section-0 h1 {
+    position: relative;
+    top: -10vh;
+    z-index: 5;
     font-size: 4rem;
     text-align: center;
 }
@@ -103,6 +105,7 @@ a {
     color: rgb(29, 29, 31);
 }
 .desc-message {
+    opacity: 0;
     width: 50%;
     font-weight: bold;
 }
@@ -151,7 +154,13 @@ a {
 }
 .sticky-elem-canvas {
     top: 0;
-    background-color: #ccc;
+    height: 100%;
+}
+.sticky-elem-canvas canvas {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
 }
 
 #show-scene-0 #scroll-section-0 .sticky-elem,
