[블랜딩 캔버스 크기 계산]
이미지추가

--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,14 @@ a {
 #show-scene-3 #scroll-section-3 .sticky-elem {
     display: block;
 }
+.image-blend-canvas {
+  
+}
+#scroll-section-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 @media (min-width: 1024px) {
     #scroll-section-0 h1 {
