--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@ a {
     font-size: 0.8rem;
 }
 .scroll-section {
+    position: relative;
     padding-top: 50vh;
 }
 #scroll-section-0 h1 {
@@ -169,15 +170,15 @@ a {
 #show-scene-3 #scroll-section-3 .sticky-elem {
     display: block;
 }
-.image-blend-canvas {
-  
-}
 #scroll-section-3 {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
+.image-blend-canvas.sticky {
+    position: fixed;
+    top: 0;
+}
 @media (min-width: 1024px) {
     #scroll-section-0 h1 {
         font-size: 9vw;
