--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ a {
 }
 .canvas-caption {
     max-width: 1000px;
-    margin: 0 auto;
+    margin: -4em auto 0;
     padding: 0 1rem;
     font-size: 1.2rem;
     color: #888;
@@ -187,6 +187,7 @@ a {
         font-size: 4vw;
     }
     .description {
+        padding: 0;
         font-size: 2rem;
     }
     .description strong {
@@ -209,9 +210,12 @@ a {
         left: 55%;
     }
     .mid-message {
+        width: 1000px;
         font-size: 4vw;
+        padding: 0;
     }
     .canvas-caption {
         font-size: 2rem;
+        padding: 0;
     }
 }
