[로딩 시 스크롤막기]
로딩시 스크롤시 오류뜨는거 수정

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,9 @@ a {
     color: rgb(29, 29, 31);
     text-decoration: none;
 }
+body.before-load {
+    overflow: hidden;
+}
 .global-nav {
     position: absolute;
     top: 0;
