--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,9 @@ body.before-load {
     display: block;
     will-change: transform, opacity;
 }
+.scorll-effect-end .sticky-elem {
+    display: none !important;
+}
 #scroll-section-3 {
     display: flex;
     flex-direction: column;
@@ -237,6 +240,9 @@ body.before-load {
 }
 .before-load .loading {
     opacity: 1;
+}
+.normal-content {
+    margin-bottom: 10rem;
 }
 @media (min-width: 1024px) {
     #scroll-section-0 h1 {
